Remove min-width on footer, not necessary, fixes layout on mobile.

--- a/style.css
+++ b/style.css
@@ -641,7 +641,6 @@ footer .contactLink {
 	#wrapper, footer {
 	    width: auto;
 	    max-width: 569px;
-	    min-width: 320px;
 	}
 
 	.footerNavigation {
